# gemm

./: .clangd  .gitignore  CMakeLists.txt  README.md  avx_vs_sse.sh  time_analysis.py  time_compare_avx_vs_sse.py
analysis/: avx_vs_sse.sh  perf_analysis.py  time_analysis.py
apps/: benchmark.cpp  gemm_benchmark.cpp  perf_driver.cpp  validate_correctness.cpp
include/: aligned_allocator.hpp  huge_page_allocator.hpp  huge_page_pool.hpp  mat.hpp
src/: main.cpp
tests/: test_mat.cpp  test_mat_constexpr.cpp
